Ending registration module and menu styles

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,11 @@
-index:
-    path: /tasks
-    controller: App\Controller\TaskController:index
+task:
+    path: /
+    controller: App\Controller\TaskController::index
+
+register:
+    path: /registro
+    controller: App\Controller\UserController::register
+
+login:
+    path: /login
+    controller: App\Controller\UserController::register
