User access and logout completed

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -6,6 +6,10 @@ register:
     path: /registro
     controller: App\Controller\UserController::register
 
+
 login:
     path: /login
-    controller: App\Controller\UserController::register
+    controller: App\Controller\UserController::login
+
+logout:
+    path: /logout
