--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -6,12 +6,23 @@ security:
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
         users_in_memory: { memory: null }
+        proveedor:
+            entity:
+                class: App\Entity\User
+                property: email
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
             anonymous: true
+            form_login:
+                login_path: login
+                check_path: login
+                provider: proveedor
+            logout:
+                path: /logout
+                target: /login
             lazy: true
             provider: users_in_memory
 
