--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -35,5 +35,10 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+         - { path: ^/tarea, roles: ROLE_USER }
+         - { path: ^/editar-tarea, roles: ROLE_USER }
+         - { path: ^/tarea-delete, roles: ROLE_USER }
+         - { path: ^/crear-tarea, roles: ROLE_USER }
+         - { path: ^/mis-tareas, roles: ROLE_USER }
+         - { path: ^/task, roles: ROLE_USER }
+
